# dsm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker_dsm.sh  docker_simple_test.py  mat.py  stop_docker_dsm.sh
docker/1/: config.json
docker/2/: config.json
docs/: design.md  general.md  reference.md
docs/pre/reveal.js-master/: index.html
docs/proposal/: proposal.tex
docs/report/: report.bib  report.tex
dsm/: CMakeLists.txt  main.cpp  param_server.cpp
dsm/include/dsm/: config.h  dsm.h  manager.h  mutex.h  object.h  peer.h  type.h
dsm/include/dsm/types/: int.h
dsm/include/dsm/utils/: safe_map.h  stringutils.h
dsm/src/: main.cpp  manager.cpp  object.cpp  stringutils.cpp
dsm/test/: 1.json  2.json  CMakeLists.txt  allocation1.cpp  allocation2.cpp  float.cpp  int32.cpp  mat.cpp  mutex.cpp  mutex1.cpp  mutex2.cpp
dsm/test/types/: float1.cpp  float2.cpp  int1.cpp  int2.cpp  mat1.cpp
dsm/web/: index.html  nodes.json  style.css
