link_libraries(dsm)

add_executable(allocation1
  allocation1.cpp
)
add_executable(allocation2
  allocation2.cpp
)

add_executable(int1
  types/int1.cpp
)
add_executable(int2
  types/int2.cpp
)
add_executable(float1
  types/float1.cpp
)
add_executable(float2
  types/float2.cpp
)

add_executable(mutex1 
  mutex1.cpp
)
add_executable(mutex2 
  mutex2.cpp
)


